<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <EditText
        android:id="@+id/editText_Nombres1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:enabled="false"
        android:hint="Nombres"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="Autofill,HardcodedText" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="352dp"
        android:text="@string/textView_Residuo"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="176dp"
        android:text="@string/textView_Dividendo"
        tools:ignore="TextContrastCheck" />/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="424dp"
        android:text="@string/textView_NumeroInvertido"
        android:textColor="#616161"
        tools:ignore="VisualLintBounds" />/>

    <EditText
        android:id="@+id/editText_Dividendo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="176dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/editText_Hint_Dividendo"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="Autofill,VisualLintBounds" />

    <EditText
        android:id="@+id/editText_Residuo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="352dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/editText_Hint_Residuo"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="Autofill,VisualLintBounds" />/>

    <EditText
        android:id="@+id/editText_NumeroInvertido1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="424dp"
        android:autofillHints=""
        android:ems="10"
        android:enabled="false"
        android:hint="@string/editText_Hint_NumeroInvertido"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="VisualLintBounds" />/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="52dp"
        android:text="@string/textView_Nombres"
        tools:ignore="VisualLintBounds,TextContrastCheck" />/>

    <Button
        android:id="@+id/button_Siguiente1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="512dp"
        android:text="@string/button_siguinte"
        tools:ignore="VisualLintBounds" />/>

    <EditText
        android:id="@+id/editText_Divisor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="228dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/editText_Hint_Divisor"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="Autofill,VisualLintBounds" />/>

    <EditText
        android:id="@+id/editText_ParteEntera1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="292dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/editText_Hint_ParteEntera"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="Autofill,VisualLintBounds" />/>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="228dp"
        android:text="@string/textView_Divisor"
        tools:ignore="VisualLintBounds,TextContrastCheck" />/>

    <EditText
        android:id="@+id/editText_Apellidos1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="104dp"
        android:autofillHints=""
        android:ems="10"
        android:enabled="false"
        android:hint="@string/editText_Hint_Apellidos"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="VisualLintBounds,DuplicateSpeakableTextCheck" />/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="292dp"
        android:text="@string/textView_ParteEntera"
        tools:ignore="VisualLintBounds,TextContrastCheck" />/>

    <Button
        android:id="@+id/button_resultados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="564dp"
        android:text="@string/button_resultado"
        tools:ignore="TouchTargetSizeCheck,VisualLintBounds" />/>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="104dp"
        android:text="@string/textView_Apellidos"
        tools:ignore="VisualLintBounds,TextContrastCheck" />/>
</RelativeLayout>